--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -27,7 +27,7 @@ html {
     height: 100%;
 }
 body {
-    font-family: 'Helvetica Neue',Helvetica,Arial,'Microsoft YaHei',sans-serif;
+	font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
     color: #333;
     background-image: url(https://ooo.0o0.ooo/2016/06/20/5768c606cf9cb.jpg);
     position: relative;
