--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,9 @@ layout: default
         </article>
         <hr>
 
+
+        <blockquote>如果您觉得文章对您有帮助，<a href="/about/#打赏">欢迎打赏</a></blockquote>
+
         {% assign hasSimilar = '' %}
         {% for post in site.related_posts %}
         {% assign postHasSimilar = false %}
